duicontrolpanel (0.9.6~unreleased) unstable; urgency=low

  * UP

 -- Sandor Pinter <sandor.pinter@blumsoft.eu>  Mon, 22 Nov 2010 15:50:09 +0100

duicontrolpanel (0.9.5) unstable; urgency=low

  [ Robert Manner ]
  * Fixes lintian errors
  * Restores protection for segfaulting briefs: helper process gets
    restarted and does not try to reload the bad applet
  * Fixes: background theme id

  [ Sandor Pinter ]
  * Fixing layout, change logical ids
  * Fixes: NB#205767

 -- Sandor Pinter <sandor.pinter@blumsoft.eu>  Fri, 19 Nov 2010 13:51:52 +0100

duicontrolpanel (0.9.4) unstable; urgency=low

  * Changes: new type of briefview: special
  * Changes: a logical MainPage category to add applet icons to the
    mainpage
  * Changes: by default disables skipping the category page if it has
    one applet in the list only

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 10 Nov 2010 16:58:22 +0100

duicontrolpanel (0.9.3.1) unstable; urgency=low

  * Reverts adding a title on applet pages

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 10 Nov 2010 11:30:41 +0100

duicontrolpanel (0.9.3) unstable; urgency=low

  * Fixes: BMC#7195 - App is shown on the tray and in the launcher
  * Fixes: NB#199641 - Settings app view switches back from applet view
    to main view when we try to open the settings app once again from
    launcher

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 09 Nov 2010 17:28:40 +0100

duicontrolpanel (0.9.2) unstable; urgency=low

  * Fixes: applet icon value texts are not appearing sometimes
  * Changes: controlpanel turns black (uses inverted theme)
  * Fixes: NB#202583 - duicontrolpanel: built without optimizations

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 03 Nov 2010 12:04:17 +0100

duicontrolpanel (0.9.1) unstable; urgency=low

  * Fixes: NB#200458 - Returning false from DcpWidget::back() doesn't
    prevent page closing
  * Fixes: NB#200663 - SECURITY - duicontrolpanel should depend on
    clean-device